force-app/main/default/objects/VDT_Transaction_Result__c/VDT_Transaction_Result__c.object-meta.xml
<CustomObject>
    <label>VDT Transaction Result</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>VDT Transaction Result</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VDT Transaction Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>