force-app/main/default/objects/VDT_Transaction_Result__c/fields/Data_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Data_Calculation__c</fullName>
    <label>Data Calculation</label>
    <referenceTo>VDT_Data_Calculation__c</referenceTo>
    <relationshipLabel>VDT Transaction Results</relationshipLabel>
    <relationshipName>VDT_Transaction_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>