force-app/main/default/objects/VDT_Transaction_Result__c/fields/Parent_Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Territory_Id__c</fullName>
    <label>Parent Territory Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>