force-app/main/default/objects/VDT_Transaction_Result__c/fields/Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>Territory_Id__c</fullName>
    <externalId>true</externalId>
    <label>Territory Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>