force-app/main/default/objects/VDT_Transaction_Result__c/fields/Total_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Accounts__c</fullName>
    <label>Total Accounts</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>